refactor: 반환 reservation 리스트 unmodifiable로 래핑